<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative_data"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin">

        <ImageView
            android:id="@+id/representative_photo"
            android:layout_width="@dimen/photo_dimension"
            android:layout_height="@dimen/photo_dimension"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative_data.official.photoUrl}"
            app:srcCompat="@drawable/ic_profile"
            android:contentDescription="@string/representative_photo" />

        <TextView
            android:id="@+id/office_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            tools:text=" Office Name"
            android:text="@{representative_data.office.name}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Representative Name"
            android:text="@{representative_data.official.name}"
            app:layout_constraintStart_toStartOf="@+id/office_name"
            app:layout_constraintTop_toBottomOf="@id/office_name"/>

        <TextView
            android:id="@+id/party_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{representative_data.official.party}"
            app:layout_constraintStart_toStartOf="@+id/office_name"
            app:layout_constraintTop_toBottomOf="@+id/person_name"
            tools:text="Republic division" />

        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="@dimen/social_media_icon"
            android:layout_height="@dimen/social_media_icon"
            android:layout_marginEnd="@dimen/default_margin"
            android:contentDescription="@string/twitter_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/facebook_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1"
            app:srcCompat="@drawable/ic_twitter"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="@dimen/social_media_icon"
            android:layout_height="@dimen/social_media_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1"
            app:srcCompat="@drawable/ic_facebook"
            android:contentDescription="@string/faceBook_icon" />

        <ImageView
            android:id="@+id/www_icon"
            android:layout_width="@dimen/social_media_icon"
            android:layout_height="@dimen/social_media_icon"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/twitter_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1"
            app:srcCompat="@drawable/ic_www"
            android:contentDescription="@string/website_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>